# archivekey-recovery

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  Start ArchiveKey.cmd  app.py  build_msi.ps1  pyproject.toml
.github/workflows/: release.yml  tests.yml
archivekey/: __init__.py  candidates.py  engine.py  rar5.py  tools.py  updater.py
assets/: archivekey-update-public.pem
docs/: THREAT_MODEL.md
installer/: ArchiveKey.wxs  License.rtf
scripts/: sign_update.py
tests/: test_candidates.py  test_engine.py  test_rar5.py  test_updater.py
wordlists/: community-seeds.txt
