[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "archivekey-recovery"
version = "0.2.0"
description = "Local, probability-ranked password recovery for authorized archives"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ArchiveKey contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]

[tool.setuptools.packages.find]
include = ["archivekey*"]
